<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    tools:context=".ui.single_character.PlayListFragment"
    android:background="@color/main_background_hit">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/off_white_secondary_backgrounds"
        tools:ignore="MissingConstraints">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/book_title"/>

        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_input_write_url"

            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonAddUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_url"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/light_orange_highlights_buttons"
            android:padding="20dp"/>

        <Spinner
            android:id="@+id/spinnerUrls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="20dp"
            />

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:padding="20dp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>