<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.all_character.AllItemsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background_hit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/off_white_secondary_backgrounds"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_books"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="30sp"/>

                    <TextView
                        android:id="@+id/totalReadingTimeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Total Reading Time: 0 minutes"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/to_read_books"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_margin="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/toReadRecycle"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/already_read_books"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_margin="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alreadyReadRecycle"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/all_books"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_margin="10dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recycle"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/timer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/ic_lock_idle_alarm"
        android:layout_marginBottom="86dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/light_orange_highlights_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:layout_margin="16dp"
        android:backgroundTint="@color/light_orange_highlights_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
